--- a/关于视频.md
+++ b/关于视频.md
@@ -23,9 +23,9 @@
 ```tex
 $
 % 一看到 \$ 老Latex受害者了
-1. 选择题第9题中字幕 AEC 和 BEC 应改成 AED BED
+1. \text{选择题第9题中字幕 $AEC$ 和 $BEC$ 应改成} AED BED
 
-2. 第21题 视频答案中DE = BF无用, 可删去
+2. \text{第}21\text{题} \text{视频答案中}DE = BF\text{无用,} \text{可删去}
 $
 ```
 
