--- a/关于视频.md
+++ b/关于视频.md
@@ -2,6 +2,9 @@
 
 ## 关于
 \
+本视频风格仿照MK\
+\
+\
 本来打算多做点的, 但意识到时间不够, 比如最后一题我想到了另一种解法: 用圆幂定理, 但是仅仅关于介绍这个定理的动画最少最少我都要花费1天制作,\
 也包括开头结尾, 本来想自己制作一个开头的, 但是发觉时间不够, 就用了MK的开头...\
 \
