--- a/关于视频.md
+++ b/关于视频.md
@@ -35,11 +35,11 @@ $
 2. 9年6班 颜浩 
 3. 9年6班 郑阳
 
-如果你想和我制作更多数学视频, 请加入 Q群 1020800808 @_2,~0_.making, 这是难度不高的入群题 \
+如果你想和我制作更多数学视频, 请加入 Q群 1020800808 @_2,~0_.making, 这是难度不高的[入群题](https://paste.ubuntu.com/p/9RWftyZXmy/) \
 \
  ..|..   \
 \\\_/  
-[点此入群](https://paste.ubuntu.com/p/9RWftyZXmy/)\
+[点此入群](https://jq.qq.com/?_wv=1027&k=AMTx2Mm3)\
 \
 入群题难度确实不高, 还可以钻逻辑漏洞\
 祝你好运 >.<
